--- a/style.css
+++ b/style.css
@@ -4,16 +4,16 @@ body {
     color: #333;
     font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
     width: 500px;
     margin: 0 auto;
     display: block;
     text-align: right;
 }
-.aaa img {
+.header img {
     width: 100%;
 }
-.aaa .more_inf {
+.header .header__link {
     font-family: fantasy, cursive;
 }
 
@@ -21,7 +21,7 @@ body {
     .aaa { text-align: center;
     }
 }
-.centered-main-page-element {
+.main {
     display: block;
     width: 500px;
     margin: 0 auto 0;
@@ -120,12 +120,12 @@ li > label {
 li >    input[type="text"] {
     width: 226px;
 }
-button.delete img {
+button.delete__button img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete__button img:hover {
     transform: rotateZ(0);
 }
 
