--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -12,7 +12,7 @@ body {
     text-align: right;
 }
 
-.header img {
+.header__image {
     width: 100%;
 }
 
@@ -21,7 +21,7 @@ body {
 }
 
 @media (max-width:768px) {
-    .aaa { text-align: center;
+    .header { text-align: center;
     }
 }
 
@@ -31,13 +31,15 @@ body {
     margin: 0 auto 0;
 }
 
-.task {
+.task-input__field,
+.task-list__input,
+.task-list__label {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
 }
 
-.task-row-wrapper {
+.task-input__wrapper {
     display: flex;
 }
 
@@ -138,13 +140,13 @@ li >    input[type="text"] {
     width: 226px;
 }
 
-button.delete__button img {
+button.task-list__delete-button img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.delete__button img:hover {
+button.task-list__delete-button img:hover {
     transform: rotateZ(0);
 }
 
@@ -159,11 +161,11 @@ ul li input[type="text"] {
     display: none;
 }
 
-ul li.editMode input[type="text"] {
+ul li.task-list__item--edit-mode input[type="text"] {
     display: inline-block;
     width: 224px;
 }
 
-ul li.editMode label {
+ul li.task-list__item--edit-mode label {
     display: none;
 }
