refactor(basic-3.4): replace tag selectors with class-based selectors

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     width: 100%;
 }
 
-.header .header__link {
+.header__link {
     font-family: fantasy, cursive;
 }
 
@@ -43,22 +43,28 @@
     display: flex;
 }
 
-ul {
+.task-list__items {
     margin: 0;
     padding: 0px;
 }
 
-li,
-h3 {
+.task-list__item,
+.task-list__heading {
     list-style: none;
 }
 
-input,
-button{
+.task-input__field,
+.task-list__checkbox,
+.task-list__input,
+.task-input__button,
+.task-list__delete-button,
+.task-list__edit-button{
     outline: none;
 }
 
-button {
+.task-input__button,
+.task-list__delete-button,
+.task-list__edit-button {
     background: none;
     border: 0px;
     color: #888;
@@ -68,13 +74,15 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.task-input__button:hover,
+.task-list__delete-button:hover,
+.task-list__edit-button:hover {
     color: #3a3a3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task"] {
+.task-list__heading,
+.task-input__label {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -84,7 +92,8 @@ label[for="new-task"] {
     text-transform: uppercase;
 }
 
-input[type="text"] {
+.task-input__field,
+.task-list__input {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -97,22 +106,24 @@ input[type="text"] {
     color: #888;
 }
 
-input[type="text"]:focus {
+.task-input__field:focus,
+.task-list__input:focus {
     color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.task-input__label {
     display: block;
     margin: 0 0 20px;
 }
 
-input#new-task {
+.task-input__field,
+.task-list__input {
     width: 318px;
 }
 
 /* Task list */
-li {
+.task-list__item {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -121,51 +132,50 @@ li {
     align-items: center;
 }
 
-li > * {
+.task-list__item > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-list__checkbox {
     margin: 0 10px;
 }
 
-li > label {
+.task-list__label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
 
-li >    input[type="text"] {
+.task-list__input {
     width: 226px;
 }
 
-button.task-list__delete-button img {
+.task-list__delete-button img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
 
-button.task-list__delete-button img:hover {
+.task-list__delete-button img:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task-list__label {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.task-list__input {
     display: none;
 }
 
-ul li.task-list__item--edit-mode input[type="text"] {
+.task-list__item--edit-mode .task-list__input {
     display: inline-block;
     width: 224px;
 }
-
-ul li.task-list__item--edit-mode label {
+.task-list__item--edit-mode .task-list__input{
     display: none;
 }
